# random-ark

./: Cargo.toml  README.md
random-contract/: Cargo.toml  README.md  build.sh
random-contract/src/: lib.rs  types.rs
src/: lib.rs  main.rs
