[package]
name = "random-ark"
version = "0.1.0"
edition = "2021"

# Changed from lib to bin for WASI compatibility
[[bin]]
name = "random-ark"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
getrandom = { version = "0.2", features = ["custom"] }
rand = "0.8"

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
